tests/ui/unsafe/issue-115348-false-positive-warning-of-unnecessary-unsafe.stderr
error[E0004]: non-exhaustive patterns: `None` not covered
  --> $DIR/issue-115348-false-positive-warning-of-unnecessary-unsafe.rs:10:11
   |
LL |     match x {
   |           ^ pattern `None` not covered
   |
note: `Option<u32>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<u32>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Some(_) => unsafe { uwu() },
LL ~         None => todo!(),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
